# command-line-rust

./: .gitignore  Cargo.toml  README.md
docs/: tail.md
src/: lib.rs  libcat.rs  libcomm.rs  libcut.rs  libfind.rs  libgrep.rs  libhead.rs  libtail.rs  libuniq.rs  libwc.rs
tests/: test_cat.rs  test_comm.rs  test_cut.rs  test_echo.rs  test_find.rs  test_grep.rs  test_head.rs  test_something.rs  test_uniq.rs  test_wc.rs  totalities.rs  truths.rs
tests/cat/: haiku.txt
tests/comm/: FAANG.txt  MANGA.txt  lowercase.txt
tests/common/: mod.rs
tests/find/d/: b.csv
tests/grep/: nobody.txt
tests/head/: manylines.txt
tests/uniq/: full.txt
tests/wc/: nonascii.txt
