[package]
name = "command-line-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ganyu Xu <xuganyu@berkeley.edu>"]

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "head"
path = "src/bin/head.rs"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
