[package]
name = "command-line-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ganyu Xu <xuganyu@berkeley.edu>"]

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "head"
path = "src/bin/head.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "uniq"
path = "src/bin/uniq.rs"

[[bin]]
name = "find"
path = "src/bin/find.rs"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"
tempfile = "3.3.0"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.1"
walkdir = "2.3.2"
